# pitft28-agent

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.am  README.md  config.h  config.h.in~  configure.ac  lv_conf.h  lv_drv_conf.h  pitft28-keys.dts  pitft_agent  test
src/: bluetooth.c  bluetooth.h  bluetooth_agent  bluetooth_agent.c  dev_node.cpp  dev_node.h  device.h  device_scanner.cpp  device_scanner.h  fb.h  framebuffer.c  framebuffer.cpp  framebuffer.h  interface.c  interface.h  lv_conf.h  lv_drv_conf.h  pitft_agent.c  pitft_agent.cpp  pitft_agent.h  touchscreen.c  touchscreen.h  weak_password.h
