bin_PROGRAMS=pitft_agent
pitft_agent_SOURCES=                                    \
  src/pitft_agent.h                                     \
  src/pitft_agent.c                                     \
  src/touchscreen.h                                     \
  src/touchscreen.c                                     \
  src/framebuffer.h                                     \
  src/framebuffer.c                                     \
  src/interface.h                                       \
  src/interface.c                                       \
                                                        \
  src/lvgl/src/lv_conf_checker.h                        \
  src/lvgl/src/lv_core/lv_debug.c                       \
  src/lvgl/src/lv_core/lv_debug.h                       \
  src/lvgl/src/lv_core/lv_disp.c                        \
  src/lvgl/src/lv_core/lv_disp.h                        \
  src/lvgl/src/lv_core/lv_group.c                       \
  src/lvgl/src/lv_core/lv_group.h                       \
  src/lvgl/src/lv_core/lv_indev.c                       \
  src/lvgl/src/lv_core/lv_indev.h                       \
  src/lvgl/src/lv_core/lv_obj.c                         \
  src/lvgl/src/lv_core/lv_obj.h                         \
  src/lvgl/src/lv_core/lv_refr.c                        \
  src/lvgl/src/lv_core/lv_refr.h                        \
  src/lvgl/src/lv_core/lv_style.c                       \
  src/lvgl/src/lv_core/lv_style.h                       \
  src/lvgl/src/lv_draw/lv_draw_arc.c                    \
  src/lvgl/src/lv_draw/lv_draw_arc.h                    \
  src/lvgl/src/lv_draw/lv_draw_basic.c                  \
  src/lvgl/src/lv_draw/lv_draw_basic.h                  \
  src/lvgl/src/lv_draw/lv_draw.c                        \
  src/lvgl/src/lv_draw/lv_draw.h                        \
  src/lvgl/src/lv_draw/lv_draw_img.c                    \
  src/lvgl/src/lv_draw/lv_draw_img.h                    \
  src/lvgl/src/lv_draw/lv_draw_label.c                  \
  src/lvgl/src/lv_draw/lv_draw_label.h                  \
  src/lvgl/src/lv_draw/lv_draw_line.c                   \
  src/lvgl/src/lv_draw/lv_draw_line.h                   \
  src/lvgl/src/lv_draw/lv_draw_rect.c                   \
  src/lvgl/src/lv_draw/lv_draw_rect.h                   \
  src/lvgl/src/lv_draw/lv_draw_triangle.c               \
  src/lvgl/src/lv_draw/lv_draw_triangle.h               \
  src/lvgl/src/lv_draw/lv_img_cache.c                   \
  src/lvgl/src/lv_draw/lv_img_cache.h                   \
  src/lvgl/src/lv_draw/lv_img_decoder.c                 \
  src/lvgl/src/lv_draw/lv_img_decoder.h                 \
  src/lvgl/src/lv_font/lv_font.c                        \
  src/lvgl/src/lv_font/lv_font_fmt_txt.c                \
  src/lvgl/src/lv_font/lv_font_fmt_txt.h                \
  src/lvgl/src/lv_font/lv_font.h                        \
  src/lvgl/src/lv_font/lv_font_roboto_12.c              \
  src/lvgl/src/lv_font/lv_font_roboto_12_subpx.c        \
  src/lvgl/src/lv_font/lv_font_roboto_16.c              \
  src/lvgl/src/lv_font/lv_font_roboto_22.c              \
  src/lvgl/src/lv_font/lv_font_roboto_28.c              \
  src/lvgl/src/lv_font/lv_font_roboto_28_compressed.c   \
  src/lvgl/src/lv_font/lv_font_unscii_8.c               \
  src/lvgl/src/lv_font/lv_symbol_def.h                  \
  src/lvgl/src/lv_hal/lv_hal_disp.c                     \
  src/lvgl/src/lv_hal/lv_hal_disp.h                     \
  src/lvgl/src/lv_hal/lv_hal.h                          \
  src/lvgl/src/lv_hal/lv_hal_indev.c                    \
  src/lvgl/src/lv_hal/lv_hal_indev.h                    \
  src/lvgl/src/lv_hal/lv_hal_tick.c                     \
  src/lvgl/src/lv_hal/lv_hal_tick.h                     \
  src/lvgl/src/lv_misc/lv_anim.c                        \
  src/lvgl/src/lv_misc/lv_anim.h                        \
  src/lvgl/src/lv_misc/lv_area.c                        \
  src/lvgl/src/lv_misc/lv_area.h                        \
  src/lvgl/src/lv_misc/lv_async.c                       \
  src/lvgl/src/lv_misc/lv_async.h                       \
  src/lvgl/src/lv_misc/lv_bidi.c                        \
  src/lvgl/src/lv_misc/lv_bidi.h                        \
  src/lvgl/src/lv_misc/lv_circ.c                        \
  src/lvgl/src/lv_misc/lv_circ.h                        \
  src/lvgl/src/lv_misc/lv_color.c                       \
  src/lvgl/src/lv_misc/lv_color.h                       \
  src/lvgl/src/lv_misc/lv_fs.c                          \
  src/lvgl/src/lv_misc/lv_fs.h                          \
  src/lvgl/src/lv_misc/lv_gc.c                          \
  src/lvgl/src/lv_misc/lv_gc.h                          \
  src/lvgl/src/lv_misc/lv_ll.c                          \
  src/lvgl/src/lv_misc/lv_ll.h                          \
  src/lvgl/src/lv_misc/lv_log.c                         \
  src/lvgl/src/lv_misc/lv_log.h                         \
  src/lvgl/src/lv_misc/lv_math.c                        \
  src/lvgl/src/lv_misc/lv_math.h                        \
  src/lvgl/src/lv_misc/lv_mem.c                         \
  src/lvgl/src/lv_misc/lv_mem.h                         \
  src/lvgl/src/lv_misc/lv_printf.c                      \
  src/lvgl/src/lv_misc/lv_printf.h                      \
  src/lvgl/src/lv_misc/lv_task.c                        \
  src/lvgl/src/lv_misc/lv_task.h                        \
  src/lvgl/src/lv_misc/lv_templ.c                       \
  src/lvgl/src/lv_misc/lv_templ.h                       \
  src/lvgl/src/lv_misc/lv_txt.c                         \
  src/lvgl/src/lv_misc/lv_txt.h                         \
  src/lvgl/src/lv_misc/lv_types.h                       \
  src/lvgl/src/lv_misc/lv_utils.c                       \
  src/lvgl/src/lv_misc/lv_utils.h                       \
  src/lvgl/src/lv_objx/lv_arc.c                         \
  src/lvgl/src/lv_objx/lv_arc.h                         \
  src/lvgl/src/lv_objx/lv_bar.c                         \
  src/lvgl/src/lv_objx/lv_bar.h                         \
  src/lvgl/src/lv_objx/lv_btn.c                         \
  src/lvgl/src/lv_objx/lv_btn.h                         \
  src/lvgl/src/lv_objx/lv_btnm.c                        \
  src/lvgl/src/lv_objx/lv_btnm.h                        \
  src/lvgl/src/lv_objx/lv_calendar.c                    \
  src/lvgl/src/lv_objx/lv_calendar.h                    \
  src/lvgl/src/lv_objx/lv_canvas.c                      \
  src/lvgl/src/lv_objx/lv_canvas.h                      \
  src/lvgl/src/lv_objx/lv_cb.c                          \
  src/lvgl/src/lv_objx/lv_cb.h                          \
  src/lvgl/src/lv_objx/lv_chart.c                       \
  src/lvgl/src/lv_objx/lv_chart.h                       \
  src/lvgl/src/lv_objx/lv_cont.c                        \
  src/lvgl/src/lv_objx/lv_cont.h                        \
  src/lvgl/src/lv_objx/lv_cpicker.c                     \
  src/lvgl/src/lv_objx/lv_cpicker.h                     \
  src/lvgl/src/lv_objx/lv_ddlist.c                      \
  src/lvgl/src/lv_objx/lv_ddlist.h                      \
  src/lvgl/src/lv_objx/lv_gauge.c                       \
  src/lvgl/src/lv_objx/lv_gauge.h                       \
  src/lvgl/src/lv_objx/lv_imgbtn.c                      \
  src/lvgl/src/lv_objx/lv_imgbtn.h                      \
  src/lvgl/src/lv_objx/lv_img.c                         \
  src/lvgl/src/lv_objx/lv_img.h                         \
  src/lvgl/src/lv_objx/lv_kb.c                          \
  src/lvgl/src/lv_objx/lv_kb.h                          \
  src/lvgl/src/lv_objx/lv_label.c                       \
  src/lvgl/src/lv_objx/lv_label.h                       \
  src/lvgl/src/lv_objx/lv_led.c                         \
  src/lvgl/src/lv_objx/lv_led.h                         \
  src/lvgl/src/lv_objx/lv_line.c                        \
  src/lvgl/src/lv_objx/lv_line.h                        \
  src/lvgl/src/lv_objx/lv_list.c                        \
  src/lvgl/src/lv_objx/lv_list.h                        \
  src/lvgl/src/lv_objx/lv_lmeter.c                      \
  src/lvgl/src/lv_objx/lv_lmeter.h                      \
  src/lvgl/src/lv_objx/lv_mbox.c                        \
  src/lvgl/src/lv_objx/lv_mbox.h                        \
  src/lvgl/src/lv_objx/lv_objx_templ.c                  \
  src/lvgl/src/lv_objx/lv_objx_templ.h                  \
  src/lvgl/src/lv_objx/lv_page.c                        \
  src/lvgl/src/lv_objx/lv_page.h                        \
  src/lvgl/src/lv_objx/lv_preload.c                     \
  src/lvgl/src/lv_objx/lv_preload.h                     \
  src/lvgl/src/lv_objx/lv_roller.c                      \
  src/lvgl/src/lv_objx/lv_roller.h                      \
  src/lvgl/src/lv_objx/lv_slider.c                      \
  src/lvgl/src/lv_objx/lv_slider.h                      \
  src/lvgl/src/lv_objx/lv_spinbox.c                     \
  src/lvgl/src/lv_objx/lv_spinbox.h                     \
  src/lvgl/src/lv_objx/lv_sw.c                          \
  src/lvgl/src/lv_objx/lv_sw.h                          \
  src/lvgl/src/lv_objx/lv_table.c                       \
  src/lvgl/src/lv_objx/lv_table.h                       \
  src/lvgl/src/lv_objx/lv_tabview.c                     \
  src/lvgl/src/lv_objx/lv_tabview.h                     \
  src/lvgl/src/lv_objx/lv_ta.c                          \
  src/lvgl/src/lv_objx/lv_ta.h                          \
  src/lvgl/src/lv_objx/lv_tileview.c                    \
  src/lvgl/src/lv_objx/lv_tileview.h                    \
  src/lvgl/src/lv_objx/lv_win.c                         \
  src/lvgl/src/lv_objx/lv_win.h                         \
  src/lvgl/src/lv_themes/lv_theme_alien.c               \
  src/lvgl/src/lv_themes/lv_theme_alien.h               \
  src/lvgl/src/lv_themes/lv_theme.c                     \
  src/lvgl/src/lv_themes/lv_theme_default.c             \
  src/lvgl/src/lv_themes/lv_theme_default.h             \
  src/lvgl/src/lv_themes/lv_theme.h                     \
  src/lvgl/src/lv_themes/lv_theme_material.c            \
  src/lvgl/src/lv_themes/lv_theme_material.h            \
  src/lvgl/src/lv_themes/lv_theme_mono.c                \
  src/lvgl/src/lv_themes/lv_theme_mono.h                \
  src/lvgl/src/lv_themes/lv_theme_nemo.c                \
  src/lvgl/src/lv_themes/lv_theme_nemo.h                \
  src/lvgl/src/lv_themes/lv_theme_night.c               \
  src/lvgl/src/lv_themes/lv_theme_night.h               \
  src/lvgl/src/lv_themes/lv_theme_templ.c               \
  src/lvgl/src/lv_themes/lv_theme_templ.h               \
  src/lvgl/src/lv_themes/lv_theme_zen.c                 \
  src/lvgl/src/lv_themes/lv_theme_zen.h                 \
  src/lvgl/src/lv_version.h


pitft_agent_CFLAGS = $(LIBEVDEV_CFLAGS) $(SENSORS_CFLAGS)
# $(FREETYPE2_CFLAGS)
pitft_agent_LDADD = $(LIBEVDEV_LIBS) $(SENSORS_LIBS) -lpthread
# $(FREETYPE2_LIBS)