bin_PROGRAMS=pitft_agent
pitft_agent_SOURCES=                                      \
  src/pitft_agent.h                                       \
  src/pitft_agent.c                                       \
  src/touchscreen.h                                       \
  src/touchscreen.c                                       \
  src/framebuffer.h                                       \
  src/framebuffer.c                                       \
  src/interface.h                                         \
  src/interface.c                                         \
  src/bluetooth.h                                         \
  src/bluetooth.c                                         \
                                                          \
  src/lvgl/src/lv_core/lv_disp.c                          \
  src/lvgl/src/lv_core/lv_disp.h                          \
  src/lvgl/src/lv_core/lv_group.c                         \
  src/lvgl/src/lv_core/lv_group.h                         \
  src/lvgl/src/lv_core/lv_indev.c                         \
  src/lvgl/src/lv_core/lv_indev.h                         \
  src/lvgl/src/lv_core/lv_obj.c                           \
  src/lvgl/src/lv_core/lv_obj.h                           \
  src/lvgl/src/lv_core/lv_obj_style_dec.h                 \
  src/lvgl/src/lv_core/lv_refr.c                          \
  src/lvgl/src/lv_core/lv_refr.h                          \
  src/lvgl/src/lv_core/lv_style.c                         \
  src/lvgl/src/lv_core/lv_style.h                         \
                                                          \
  src/lvgl/src/lv_draw/lv_draw.h                          \
  src/lvgl/src/lv_draw/lv_draw_arc.c                      \
  src/lvgl/src/lv_draw/lv_draw_arc.h                      \
  src/lvgl/src/lv_draw/lv_draw_blend.c                    \
  src/lvgl/src/lv_draw/lv_draw_blend.h                    \
  src/lvgl/src/lv_draw/lv_draw_img.c                      \
  src/lvgl/src/lv_draw/lv_draw_img.h                      \
  src/lvgl/src/lv_draw/lv_draw_label.c                    \
  src/lvgl/src/lv_draw/lv_draw_label.h                    \
  src/lvgl/src/lv_draw/lv_draw_line.c                     \
  src/lvgl/src/lv_draw/lv_draw_line.h                     \
  src/lvgl/src/lv_draw/lv_draw_mask.c                     \
  src/lvgl/src/lv_draw/lv_draw_mask.h                     \
  src/lvgl/src/lv_draw/lv_draw_rect.c                     \
  src/lvgl/src/lv_draw/lv_draw_rect.h                     \
  src/lvgl/src/lv_draw/lv_draw_triangle.c                 \
  src/lvgl/src/lv_draw/lv_draw_triangle.h                 \
  src/lvgl/src/lv_draw/lv_img_buf.c                       \
  src/lvgl/src/lv_draw/lv_img_buf.h                       \
  src/lvgl/src/lv_draw/lv_img_cache.c                     \
  src/lvgl/src/lv_draw/lv_img_cache.h                     \
  src/lvgl/src/lv_draw/lv_img_decoder.c                   \
  src/lvgl/src/lv_draw/lv_img_decoder.h                   \
                                                          \
  src/lvgl/src/lv_font/lv_font.c                          \
  src/lvgl/src/lv_font/lv_font.h                          \
  src/lvgl/src/lv_font/lv_font_fmt_txt.c                  \
  src/lvgl/src/lv_font/lv_font_fmt_txt.h                  \
  src/lvgl/src/lv_font/lv_font_montserrat_8.c             \
  src/lvgl/src/lv_font/lv_font_montserrat_10.c            \
  src/lvgl/src/lv_font/lv_font_montserrat_12.c            \
  src/lvgl/src/lv_font/lv_font_montserrat_12_subpx.c      \
  src/lvgl/src/lv_font/lv_font_montserrat_14.c            \
  src/lvgl/src/lv_font/lv_font_montserrat_16.c            \
  src/lvgl/src/lv_font/lv_font_montserrat_18.c            \
  src/lvgl/src/lv_font/lv_font_montserrat_20.c            \
  src/lvgl/src/lv_font/lv_font_montserrat_22.c            \
  src/lvgl/src/lv_font/lv_font_montserrat_24.c            \
  src/lvgl/src/lv_font/lv_font_montserrat_26.c            \
  src/lvgl/src/lv_font/lv_font_montserrat_28.c            \
  src/lvgl/src/lv_font/lv_font_montserrat_28_compressed.c \
  src/lvgl/src/lv_font/lv_font_montserrat_30.c            \
  src/lvgl/src/lv_font/lv_font_montserrat_32.c            \
  src/lvgl/src/lv_font/lv_font_montserrat_34.c            \
  src/lvgl/src/lv_font/lv_font_montserrat_36.c            \
  src/lvgl/src/lv_font/lv_font_montserrat_38.c            \
  src/lvgl/src/lv_font/lv_font_montserrat_40.c            \
  src/lvgl/src/lv_font/lv_font_montserrat_42.c            \
  src/lvgl/src/lv_font/lv_font_montserrat_44.c            \
  src/lvgl/src/lv_font/lv_font_montserrat_46.c            \
  src/lvgl/src/lv_font/lv_font_montserrat_48.c            \
  src/lvgl/src/lv_font/lv_font_simsun_16_cjk.c            \
  src/lvgl/src/lv_font/lv_font_unscii_8.c                 \
  src/lvgl/src/lv_font/lv_font_unscii_16.c                \
  src/lvgl/src/lv_font/lv_symbol_def.h                    \
                                                          \
  src/lvgl/src/lv_gpu/lv_gpu_nxp_pxp_osa.c                \
  src/lvgl/src/lv_gpu/lv_gpu_nxp_pxp_osa.h                \
  src/lvgl/src/lv_gpu/lv_gpu_nxp_pxp.c                    \
  src/lvgl/src/lv_gpu/lv_gpu_nxp_pxp.h                    \
  src/lvgl/src/lv_gpu/lv_gpu_nxp_vglite.c                 \
  src/lvgl/src/lv_gpu/lv_gpu_nxp_vglite.h                 \
  src/lvgl/src/lv_gpu/lv_gpu_stm32_dma2d.c                \
  src/lvgl/src/lv_gpu/lv_gpu_stm32_dma2d.h                \
                                                          \
  src/lvgl/src/lv_hal/lv_hal.h                            \
  src/lvgl/src/lv_hal/lv_hal_disp.c                       \
  src/lvgl/src/lv_hal/lv_hal_disp.h                       \
  src/lvgl/src/lv_hal/lv_hal_indev.c                      \
  src/lvgl/src/lv_hal/lv_hal_indev.h                      \
  src/lvgl/src/lv_hal/lv_hal_tick.c                       \
  src/lvgl/src/lv_hal/lv_hal_tick.h                       \
                                                          \
  src/lvgl/src/lv_misc/lv_anim.c                          \
  src/lvgl/src/lv_misc/lv_anim.h                          \
  src/lvgl/src/lv_misc/lv_area.c                          \
  src/lvgl/src/lv_misc/lv_area.h                          \
  src/lvgl/src/lv_misc/lv_async.c                         \
  src/lvgl/src/lv_misc/lv_async.h                         \
  src/lvgl/src/lv_misc/lv_bidi.c                          \
  src/lvgl/src/lv_misc/lv_bidi.h                          \
  src/lvgl/src/lv_misc/lv_color.c                         \
  src/lvgl/src/lv_misc/lv_color.h                         \
  src/lvgl/src/lv_misc/lv_debug.c                         \
  src/lvgl/src/lv_misc/lv_debug.h                         \
  src/lvgl/src/lv_misc/lv_fs.c                            \
  src/lvgl/src/lv_misc/lv_fs.h                            \
  src/lvgl/src/lv_misc/lv_gc.c                            \
  src/lvgl/src/lv_misc/lv_gc.h                            \
  src/lvgl/src/lv_misc/lv_ll.c                            \
  src/lvgl/src/lv_misc/lv_ll.h                            \
  src/lvgl/src/lv_misc/lv_log.c                           \
  src/lvgl/src/lv_misc/lv_log.h                           \
  src/lvgl/src/lv_misc/lv_math.c                          \
  src/lvgl/src/lv_misc/lv_math.h                          \
  src/lvgl/src/lv_misc/lv_mem.c                           \
  src/lvgl/src/lv_misc/lv_mem.h                           \
  src/lvgl/src/lv_misc/lv_printf.c                        \
  src/lvgl/src/lv_misc/lv_printf.h                        \
  src/lvgl/src/lv_misc/lv_task.c                          \
  src/lvgl/src/lv_misc/lv_task.h                          \
  src/lvgl/src/lv_misc/lv_templ.c                         \
  src/lvgl/src/lv_misc/lv_templ.h                         \
  src/lvgl/src/lv_misc/lv_txt.c                           \
  src/lvgl/src/lv_misc/lv_txt.h                           \
  src/lvgl/src/lv_misc/lv_txt_ap.c                        \
  src/lvgl/src/lv_misc/lv_txt_ap.h                        \
  src/lvgl/src/lv_misc/lv_types.h                         \
  src/lvgl/src/lv_misc/lv_utils.c                         \
  src/lvgl/src/lv_misc/lv_utils.h                         \
                                                          \
  src/lvgl/src/lv_themes/lv_theme.c                       \
  src/lvgl/src/lv_themes/lv_theme.h                       \
  src/lvgl/src/lv_themes/lv_theme_empty.c                 \
  src/lvgl/src/lv_themes/lv_theme_empty.h                 \
  src/lvgl/src/lv_themes/lv_theme_material.c              \
  src/lvgl/src/lv_themes/lv_theme_material.h              \
  src/lvgl/src/lv_themes/lv_theme_mono.c                  \
  src/lvgl/src/lv_themes/lv_theme_mono.h                  \
  src/lvgl/src/lv_themes/lv_theme_template.c              \
  src/lvgl/src/lv_themes/lv_theme_template.h              \
                                                          \
  src/lvgl/src/lv_widgets/lv_arc.c                        \
  src/lvgl/src/lv_widgets/lv_arc.h                        \
  src/lvgl/src/lv_widgets/lv_bar.c                        \
  src/lvgl/src/lv_widgets/lv_bar.h                        \
  src/lvgl/src/lv_widgets/lv_btn.c                        \
  src/lvgl/src/lv_widgets/lv_btn.h                        \
  src/lvgl/src/lv_widgets/lv_btnmatrix.c                  \
  src/lvgl/src/lv_widgets/lv_btnmatrix.h                  \
  src/lvgl/src/lv_widgets/lv_calendar.c                   \
  src/lvgl/src/lv_widgets/lv_calendar.h                   \
  src/lvgl/src/lv_widgets/lv_canvas.c                     \
  src/lvgl/src/lv_widgets/lv_canvas.h                     \
  src/lvgl/src/lv_widgets/lv_chart.c                      \
  src/lvgl/src/lv_widgets/lv_chart.h                      \
  src/lvgl/src/lv_widgets/lv_checkbox.c                   \
  src/lvgl/src/lv_widgets/lv_checkbox.h                   \
  src/lvgl/src/lv_widgets/lv_cont.c                       \
  src/lvgl/src/lv_widgets/lv_cont.h                       \
  src/lvgl/src/lv_widgets/lv_cpicker.c                    \
  src/lvgl/src/lv_widgets/lv_cpicker.h                    \
  src/lvgl/src/lv_widgets/lv_dropdown.c                   \
  src/lvgl/src/lv_widgets/lv_dropdown.h                   \
  src/lvgl/src/lv_widgets/lv_gauge.c                      \
  src/lvgl/src/lv_widgets/lv_gauge.h                      \
  src/lvgl/src/lv_widgets/lv_imgbtn.c                     \
  src/lvgl/src/lv_widgets/lv_imgbtn.h                     \
  src/lvgl/src/lv_widgets/lv_img.c                        \
  src/lvgl/src/lv_widgets/lv_img.h                        \
  src/lvgl/src/lv_widgets/lv_keyboard.c                   \
  src/lvgl/src/lv_widgets/lv_keyboard.h                   \
  src/lvgl/src/lv_widgets/lv_label.c                      \
  src/lvgl/src/lv_widgets/lv_label.h                      \
  src/lvgl/src/lv_widgets/lv_led.c                        \
  src/lvgl/src/lv_widgets/lv_led.h                        \
  src/lvgl/src/lv_widgets/lv_line.c                       \
  src/lvgl/src/lv_widgets/lv_line.h                       \
  src/lvgl/src/lv_widgets/lv_linemeter.c                  \
  src/lvgl/src/lv_widgets/lv_linemeter.h                  \
  src/lvgl/src/lv_widgets/lv_list.c                       \
  src/lvgl/src/lv_widgets/lv_list.h                       \
  src/lvgl/src/lv_widgets/lv_msgbox.c                     \
  src/lvgl/src/lv_widgets/lv_msgbox.h                     \
  src/lvgl/src/lv_widgets/lv_objmask.c                    \
  src/lvgl/src/lv_widgets/lv_objmask.h                    \
  src/lvgl/src/lv_widgets/lv_objx_templ.c                 \
  src/lvgl/src/lv_widgets/lv_objx_templ.h                 \
  src/lvgl/src/lv_widgets/lv_page.c                       \
  src/lvgl/src/lv_widgets/lv_page.h                       \
  src/lvgl/src/lv_widgets/lv_roller.c                     \
  src/lvgl/src/lv_widgets/lv_roller.h                     \
  src/lvgl/src/lv_widgets/lv_slider.c                     \
  src/lvgl/src/lv_widgets/lv_slider.h                     \
  src/lvgl/src/lv_widgets/lv_spinbox.c                    \
  src/lvgl/src/lv_widgets/lv_spinbox.h                    \
  src/lvgl/src/lv_widgets/lv_switch.c                     \
  src/lvgl/src/lv_widgets/lv_switch.h                     \
  src/lvgl/src/lv_widgets/lv_table.c                      \
  src/lvgl/src/lv_widgets/lv_table.h                      \
  src/lvgl/src/lv_widgets/lv_tabview.c                    \
  src/lvgl/src/lv_widgets/lv_tabview.h                    \
  src/lvgl/src/lv_widgets/lv_textarea.c                   \
  src/lvgl/src/lv_widgets/lv_textarea.h                   \
  src/lvgl/src/lv_widgets/lv_tileview.c                   \
  src/lvgl/src/lv_widgets/lv_tileview.h                   \
  src/lvgl/src/lv_widgets/lv_win.c                        \
  src/lvgl/src/lv_widgets/lv_win.h                        \
  src/lvgl/src/lv_api_map.h                               \
  src/lvgl/src/lv_api_internal.h                          \
  src/lvgl/tests/lv_test_core/lv_test_core.c              \
  src/lvgl/tests/lv_test_core/lv_test_core.h              \
  src/lvgl/tests/lv_test_core/lv_test_font_loader.c       \
  src/lvgl/tests/lv_test_core/lv_test_font_loader.h       \
  src/lvgl/tests/lv_test_core/lv_test_obj.c               \
  src/lvgl/tests/lv_test_core/lv_test_obj.h               \
  src/lvgl/tests/lv_test_core/lv_test_style.c             \
  src/lvgl/tests/lv_test_core/lv_test_style.h             \
  src/lvgl/tests/lv_test_fonts/font_1.c                   \
  src/lvgl/tests/lv_test_fonts/font_2.c                   \
  src/lvgl/tests/lv_test_fonts/font_3.c                   \
  src/lvgl/tests/lv_test_widgets/lv_test_label.c          \
  src/lvgl/tests/lv_test_widgets/lv_test_label.h          \
  src/lvgl/tests/lv_test_assert.c                         \
  src/lvgl/tests/lv_test_assert.h                         \
  src/lvgl/tests/lv_test_conf.h                           \
  src/lvgl/tests/lv_test_main.c                           \
  src/lvgl/lvgl.h

pitft_agent_CFLAGS = $(LIBEVDEV_CFLAGS) $(BLUEZ_CFLAGS) $(SENSORS_CFLAGS)
# $(FREETYPE2_CFLAGS)
pitft_agent_LDADD = $(LIBEVDEV_LIBS) $(BLUEZ_LIBS) $(SENSORS_LIBS) -lpthread
# $(FREETYPE2_LIBS)